Closed Bug 474277 Opened 15 years ago Closed 15 years ago

Incorrect use of RealUsername/RealHostname in nsMsgIncomingServer::GetPasswordWithUI

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b2

People

(Reporter: standard8, Assigned: standard8)

References

Details

Attachments

(1 file)

Attached patch The fixSplinter Review
I've just noticed this is wrong. We should be using the original username and hostname not the real username and real hostname because that is how the passwords are currently set up.

This will only affect folks who have changed their hostname/username since the account was set up and those that saved the passwords on one of the new builds up until now.

Existing users who have saved passwords are protected by the "GetPasswordWithoutUI" function (which correctly uses the original versions).

ForgetPassword also uses the original versions, so this patch is just reverting everything to be the same.

We should certainly be consistent in our usage.
Attachment #357639 - Flags: superreview?(neil)
Attachment #357639 - Flags: review?(neil)
Attachment #357639 - Flags: superreview?(neil)
Attachment #357639 - Flags: superreview+
Attachment #357639 - Flags: review?(neil)
Attachment #357639 - Flags: review+
Patch checked in: http://hg.mozilla.org/comm-central/rev/78e4ec0e00a4
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Regressed by: 1762301
No longer regressed by: 1762301
See Also: → 1762301
You need to log in before you can comment on or make changes to this bug.