Bug 474277 Incorrect use of RealUsername/RealHostname in nsMsgIncomingServer::GetPasswordWithUI. r/sr=Neil